microk8s/nginx-proxy/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy-https
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: public
  tls:
    - hosts:
      - cinemonkey.com   # ΧΩΡΙΣ secretName
  rules:
    - host: cinemonkey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-proxy
                port:
                  number: 443
